# track-coordinator

./: .gitignore  pyproject.toml
.plans/: track-coordinator-v1.md
scripts/: install.sh  uninstall.sh
skills/track-workflow/: SKILL.md
src/track_coordinator/: cli.py  git_tools.py  models.py  storage.py
tests/: test_cli.py  test_e2e_cli.py  test_installers.py  test_storage.py
