[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "track-coordinator"
version = "0.1.0"
description = "Track-first workflow CLI for parallel development work."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
track = "track_coordinator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

